name:                mtcs-pong
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/harrisonzhao/mtcs-pong#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Game
                     , MessageTypes
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , stm
  default-language:    Haskell2010

executable mtcs-pong-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtcs-pong
  default-language:    Haskell2010

test-suite mtcs-pong-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mtcs-pong
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/harrisonzhao/mtcs-pong
